<resources>
    <string name="app_name">Sample Registration Screen</string>
    <string name="header">Profile Info</string>
    <string name="email">E-Mail</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>

    <string name="email_helper_text">Invalid E-Mail Address.</string>
    <string name="username_helper_text">Username should contain at least 10 characters without empty spaces.</string>
    <string name="first_name_helper_text">First name should contain at least 1 alphabetic character. Numbers are not allowed.</string>
    <string name="last_name_helper_text">Last name should contain at least 1 character. Numbers are not allowed.</string>
    <string name="age_helper_text">Please type in a valid number.</string>

    <string name="email_profile_view">Email: %s</string>
    <string name="username_profile_view">Username: %s</string>
    <string name="full_name_profile_view">Name: %s</string>
    <string name="age_profile_view">Age: %s</string>
    <string name="again">Again</string>
</resources>