<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:padding="@dimen/main_linear_layout_padding">

    <!-- Header -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_bottom_margin"
        android:text="@string/header"
        android:textSize="@dimen/header_font_size"
        android:textStyle="bold" />

    <!-- E-Mail -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_bottom_margin"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:startIconContentDescription="@string/email"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/input_font_size"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Username -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_bottom_margin"
        android:hint="@string/username"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:startIconContentDescription="@string/username"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/input_font_size"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- First Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_bottom_margin"
        android:hint="@string/first_name"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:startIconContentDescription="@string/first_name"
        app:startIconDrawable="@drawable/baseline_pen_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="@dimen/input_font_size"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Last Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_bottom_margin"
        android:hint="@string/last_name"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:startIconContentDescription="@string/last_name"
        app:startIconDrawable="@drawable/baseline_pen_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="@dimen/input_font_size"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Age -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_bottom_margin"
        android:hint="@string/age"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:startIconContentDescription="@string/age"
        app:startIconDrawable="@drawable/baseline_cake_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="@dimen/input_font_size"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <!-- SaveBtn -->
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Space
            android:layout_width="@dimen/button_spacer"
            android:layout_height="wrap_content"/>

        <!-- ClearBtn -->
        <Button
            android:id="@+id/clear_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
    </LinearLayout>
</LinearLayout>